Opened 13 years ago

Closed 13 years ago

#8859 closed bug (fixed)

Monitor turns off booting with HD7850

Reported by: HAL Owned by: kallisti5
Priority: normal Milestone: R1
Component: Drivers/Graphics/radeon_hd Version: R1/Development
Keywords: "monitor turns off" "hd 7xxx" "HD 7XXX" "hd7xxx" "HD7XXX" boot booting Cc: HAL
Blocked By: Blocking:
Platform: All

Description

Boot Haiku using the radeon_hd driver and just after the rocket icon the display turns off.

  1. Boot Haiku normally with a HD7XXX graphics card.

Result: just after the rocket progress icon the display turns off.

  1. Boot Fail Safe Video Mode from the debug menu just before booting. Result: Haiku will boot to a normal desktop.

I was testing with GCC4 hybrid hrev44483.

Attachments (4)

100_0621.JPG (1.5 MB ) - added by HAL 13 years ago.
Debug screen 1 at boot
100_0622.JPG (1.6 MB ) - added by HAL 13 years ago.
Debug screen 2 at boot.
100_0623.JPG (2.1 MB ) - added by HAL 13 years ago.
Debug and back trace screen 3.
100_0624.JPG (1.9 MB ) - added by HAL 13 years ago.
Back trace screen 4.

Change History (11)

by HAL, 13 years ago

Attachment: 100_0621.JPG added

Debug screen 1 at boot

by HAL, 13 years ago

Attachment: 100_0622.JPG added

Debug screen 2 at boot.

by HAL, 13 years ago

Attachment: 100_0623.JPG added

Debug and back trace screen 3.

by HAL, 13 years ago

Attachment: 100_0624.JPG added

Back trace screen 4.

comment:1 by kallisti5, 13 years ago

Version: R1/alpha3R1/Development

this is first mention of a backtrace... I thought you only saw a black screen?

comment:2 by Bouncer, 13 years ago

The ticket does not mention this - but it is possible that his monitor is connected either by HDMI or DisplayPort. That may account for his display appearing to turning off immediately after the rocket. From my own testing - it appears the Radeon HD drivers still do not support DP.

in reply to:  1 comment:3 by HAL, 13 years ago

Replying to kallisti5:

this is first mention of a backtrace... I thought you only saw a black screen?

The monitor turns of if I boot normally. If I boot in debug mode so as to take a picture of each page, I can get a back trace.

comment:4 by HAL, 13 years ago

I just found that I can boot to the desktop without Safe Mode, vesa, by having a DVI to VGA adaptor and connecting to the VGA on my LCD monitor. As it is booting the monitor itself puts a message on the screen "Out of range 1280x768". 1280x768 is the correct resolution but during boot it seems to be getting something else. I think it is getting 1280x1024. As the Desktop comes up it changes to the correct resolution for the monitor.

comment:5 by kallisti5, 13 years ago

try again with an image hrev44532 or later. I added lots of new table code which made my HD 7970 start working 100%.

Keep in mind displayport really only works by chance when it does work atm. (DP is unfinished, although close)

comment:6 by HAL, 13 years ago

Its booting fine now. Thanks for the quik work.

comment:7 by kallisti5, 13 years ago

Resolution: fixed
Status: newclosed

Thanks!

Stay tuned for DisplayPort support in the future! :P

Fixed via hrev44532.

Note: See TracTickets for help on using tickets.