radeon_hd: add v1.4 dig encoder setup

* Add 1.4 encoder control used in latest HD 7xxx cards
* Should make progress towards resolving #8859